# DockerProject

./: README.md
rust-docker/: Cargo.toml
rust-docker/migrations/2024-10-10-101010-create_users/: up.sql
rust-docker/src/: config.rs  lib.rs  main.rs
rust-docker/src/db/: connection.rs
rust-docker/src/errors/: app_error.rs
rust-docker/src/handlers/: student_handler.rs
rust-docker/src/models/: student.rs
rust-docker/tests/: integration_tests.rs
rusty-rocket/: Cargo.toml  diesel.toml  tasks.db
rusty-rocket/database/: database.rs
