[package]
name = "rust-docker"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0.0-beta.8"
diesel = { version = "2.0.0", features = ["sqlite"] }
diesel_migrations = "2.0.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
