[package]
name = "rusty-rocket"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1-rc.2", features = ["json"] }
diesel = { version = "2.2.4", features = ["sqlite"] }
dotenvy = "0.15"
sqlx ={ version="0.8.2", feaures=["runtime-tokio-native-tls","sqlite"] }
tokio ={ version = "1", features = ["full"] }
